cmake_minimum_required (VERSION 3.8)

project ("Alogorithms")

# DFS
#add_executable( exec DFS/boj_1167.cpp )
#add_executable( exec DFS/boj_1937.cpp )
#add_executable( exec DFS/boj_2606.cpp )
#add_executable( exec DFS/boj_2644.cpp )

# BFS
#add_executable( exec BFS/boj_1260.cpp )
#add_executable( exec BFS/boj_2178.cpp )
#add_executable( exec BFS/boj_2583.cpp )
#add_executable( exec BFS/boj_2589.cpp )
#add_executable( exec BFS/boj_4963.cpp )
#add_executable( exec BFS/boj_7569.cpp )
#add_executable( exec BFS/boj_2636.cpp )
#add_executable( exec BFS/boj_2667.cpp )
#add_executable( exec BFS/boj_1012.cpp )
#add_executable( exec BFS/boj_7576.cpp )
#add_executable( exec BFS/boj_11724.cpp )
add_executable( exec BFS/boj_14502.cpp )

# Union Find
#add_executable( exec UnionFind/boj_16724.cpp )
