cmake_minimum_required (VERSION 3.8)

project ("Alogorithms")

set(CMAKE_CXX_STANDARD 17)

# DFS
#add_executable( exec DFS/boj_1167.cpp )
#add_executable( exec DFS/boj_1937.cpp )
#add_executable( exec DFS/boj_2606.cpp )
#add_executable( exec DFS/boj_2644.cpp )

# BFS
#add_executable( exec BFS/boj_1260.cpp )
#add_executable( exec BFS/boj_2178.cpp )
#add_executable( exec BFS/boj_2583.cpp )
#add_executable( exec BFS/boj_2589.cpp )
#add_executable( exec BFS/boj_4963.cpp )
#add_executable( exec BFS/boj_7569.cpp )
#add_executable( exec BFS/boj_2636.cpp )
#add_executable( exec BFS/boj_2667.cpp )
#add_executable( exec BFS/boj_1012.cpp )
#add_executable( exec BFS/boj_7576.cpp )
#add_executable( exec BFS/boj_11724.cpp )
#add_executable( exec BFS/boj_14502.cpp )
#add_executable( exec BFS/boj_2468.cpp )
#add_executable( exec BFS/boj_10026.cpp )
#add_executable( exec BFS/boj_7562.cpp )
#add_executable( exec BFS/boj_2206.cpp )
#add_executable( exec BFS/boj_11725.cpp )
#add_executable( exec BFS/boj_16236.cpp )
#add_executable( exec BFS/boj_13460.cpp )
#add_executable( exec BFS/boj_1707.cpp )
#add_executable( exec BFS/boj_16234.cpp )
#add_executable( exec BFS/boj_3055.cpp )
#add_executable( exec BFS/boj_5014.cpp )
#add_executable( exec BFS/boj_23288.cpp )
#add_executable( exec BFS/boj_1941.cpp )
#add_executable( exec BFS/boj_17471.cpp )
#add_executable( exec BFS/boj_11060.cpp )
#add_executable( exec BFS/boj_13913.cpp )


# Dijkstra
#add_executable( exec Dijkstra/boj_13549.cpp )
#add_executable( exec Dijkstra/boj_1504.cpp )
#add_executable( exec Dijkstra/boj_18352.cpp )
#add_executable( exec Dijkstra/boj_2665.cpp )
#add_executable( exec Dijkstra/boj_14938.cpp )
#add_executable( exec Dijkstra/boj_11909.cpp )

# Dynamic Programming
#add_executable( exec DP/boj_15988.cpp )
#add_executable( exec DP/boj_12865.cpp )
#add_executable( exec DP/boj_2629.cpp )
#add_executable( exec DP/boj_2169.cpp )
#add_executable( exec DP/boj_9655.cpp )
#add_executable( exec DP/boj_2096.cpp )
#add_executable( exec DP/boj_1516.cpp )
#add_executable( exec DP/boj_1495.cpp )
#add_executable( exec DP/boj_2775.cpp )
#add_executable( exec DP/boj_17404.cpp )
#add_executable( exec DP/boj_1423.cpp )
#add_executable( exec DP/boj_14501.cpp )
#add_executable( exec DP/boj_1890.cpp )
add_executable( exec DP/boj_1535.cpp )

# Floyd-Warshall
#add_executable( exec Floyd-Warshall/boj_1389.cpp)

# Union Find
#add_executable( exec UnionFind/boj_16724.cpp )
